@@ -1,3 +1,12 @@
+2010-02-10
+
+	* libsylph/filter.[ch]
+	  src/prefs_filter_edit.[ch]
+	  src/addressbook.[ch]
+	  src/main.c: added a new filter match type: is (not) in addressbook.
+	  addressbook_has_address(): new function for fast search of address
+	  book by addresses.
+
 2010-02-05
 
 	* src/setup.c: confirm on cancel. Modified messages.
